Add /delegates endpoints
